# self_portfolio_webpage

./: .gitignore  README.md  main.py  pyproject.toml
data/: cv.json  photo.json  profile.json  projects.json
static/css/: style.css
static/js/: script.js
templates/: base.html  contact_me.html  landing_page.html  photo_showcase.html  portfolio.html
