[project]
name = "self-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-mail>=0.9.1",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.0",
]
